--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">SocialMediaProjectKK</string>
+    <string name="name"><sup>*</sup>Name</string>
+    <string name="email"><sup>*</sup>Email</string>
+    <string name="password"><sup>*</sup>Password</string>
 </resources>
